fix for psr bitrix

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
   ],
   "require": {
     "php": ">=5.3",
+	"psr/log": "^3.0",
     "monolog/monolog": "1.*",
     "theorchard/monolog-cascade": "~0.2"
   },
